Updated navbar and fixed logo alignment

--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,13 @@ body {
 /* NAVBAR */
 
 .navbar{
-     background:black;
+    background:black;
     color:white;
     display:flex;
     justify-content:space-between;
     align-items:center;
-    padding:15px 40px;
+    height: 80px;      
+    padding: 0 40px;
 
     position:sticky;
     top:0;
@@ -47,11 +48,21 @@ body {
     color:#444;
 }
 
-.logo{
-    font-size:32px;
-    font-weight:700;
-    letter-spacing:4px;
-    text-transform:uppercase;
+.logo img {
+    height: 100%;
+    height: 70px;
+    width: auto;
+
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+.logo {
+    margin-right: 20px;
 }
 
 .navbar a {
